tests/ui/has-expr-argument.stderr
error: this attribute takes no arguments

         = help: use `#[contracts]`

 --> $DIR/has-expr-argument.rs:3:13
  |
3 | #[contracts(true)]
  |             ^^^^
