tests/ui/has-expr-argument.rs
use contracts::contracts;

#[contracts(true)]
fn f() {}

fn main() {}
